--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="flex-1">
               <p class="text-sm font-bold text-slate-800 uppercase tracking-wide">Quinta Pytu'u, Pirayú</p>
-              <a href="https://maps.google.com" target="_blank"
+              <a href="https://share.google/4nVROOonkBG2A2FUv" target="_blank"
                 class="text-sm font-bold text-cerro-blue hover:underline cursor-pointer">
                 Ver Ubicación en Mapa
               </a>
@@ -115,7 +115,7 @@
         </div>
 
         <div class="mt-2">
-          <a href="https://wa.me/595971704777?text=Hola!%20Confirmo%20mi%20asistencia%20al%20cumple%20de%20Iker%20%E2%9A%BD%EF%B8%8F"
+          <a href="https://wa.me/595983463863?text=Hola!%20Confirmo%20mi%20asistencia%20al%20cumple%20de%20Iker%20%E2%9A%BD%EF%B8%8F"
             target="_blank"
             class="group relative flex w-full items-center justify-center gap-2 rounded-full bg-whatsapp px-6 py-3.5 text-white shadow-lg shadow-green-500/30 transition-all hover:scale-[1.02] hover:bg-[#20bd5a] active:scale-95">
 
