--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="flex-1">
               <p class="text-sm font-bold text-slate-800 uppercase tracking-wide">Quinta Pytu'u, Pirayú</p>
-              <a href="https://share.google/4nVROOonkBG2A2FUv" target="_blank"
+              <a href="https://maps.app.goo.gl/gFFueZDQe1W5DL4y5" target="_blank"
                 class="text-sm font-bold text-cerro-blue hover:underline cursor-pointer">
                 Ver Ubicación en Mapa
               </a>
